@@ -15,25 +15,25 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 0.028
-Acme::Ford::Prefect                            = 0.028
-Acme::Ford::Prefect::FFI                       = 0.25
+Acme::Alien::DontPanic                         = 0.030
+Acme::Ford::Prefect                            = 0.030
+Acme::Ford::Prefect::FFI                       = 0.27
 Alien                                          = 0.93
-Alien::Base                                    = 0.028
+Alien::Base                                    = 0.030
 Alien::bison                                   = 0.16
 Alien::bz2                                     = 0.17
 Alien::bz2::Installer                          = 0.05
-Alien::CMake                                   = 0.07
+Alien::CMake                                   = 0.08
 Alien::Editline                                = 0.06
 Alien::FFI                                     = 0.14
 Alien::flex                                    = 0.07
 Alien::gmake                                   = 0.14
 Alien::Hunspell                                = 0.07
-Alien::Libarchive                              = 0.27
-Alien::Libarchive::Installer                   = 0.14
+Alien::Libarchive                              = 0.28
+Alien::Libarchive::Installer                   = 0.15
 Alien::Libbz2                                  = 0.03
 Alien::libtool24                               = 0.04
-Alien::LibYAML                                 = 0.1.9
+Alien::LibYAML                                 = 0.1.10
 Alien::m4                                      = 0.07
 Alien::MSYS                                    = 0.07
 Alien::nasm                                    = 0.10
@@ -41,12 +41,13 @@ Alien::o2dll                                   = 0.04
 Alien::Packages::Cygwin                        = 0.03
 Alien::patch                                   = 0.08
 ;Alt::Alien::FFI::System                       = 0.14
+;Alt::FFI::libffi                              = 0.01
 AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.09
 AnyEvent::Git::Wrapper                         = 0.09
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.86
-AnyEvent::WebSocket::Client                    = 0.33
+AnyEvent::WebSocket::Client                    = 0.37
 App::cpangitify                                = 0.12
 App::pwhich                                    = 1.14
 App::palien                                    = 0.03
@@ -58,26 +59,27 @@ Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::FFI                       = 0.0900
 Archive::Libarchive::XS                        = 0.0901
 Authen::Simple::PlugAuth                       = 0.02
+Class::Inspector                               = 1.30
 Clustericious                                  = 1.20
 Clustericious::Coder::BSON                     = 0.01
 Clustericious::Admin                           = 1.08
-Dist::Zilla::App::Command::aliendeps           = 0.01
+Dist::Zilla::App::Command::aliendeps           = 0.02
 Dist::Zilla::Plugin::Alt                       = 0.04
-Dist::Zilla::Plugin::Author::Plicease          = 2.04
+Dist::Zilla::Plugin::Author::Plicease          = 2.10
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::InsertExample             = 0.06
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::jQuery                    = 0.04
 Dist::Zilla::Plugin::MathInt64                 = 0.09
-Dist::Zilla::Plugin::OurPkgVersion             = 0.08
+Dist::Zilla::Plugin::OurPkgVersion             = 0.10
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.03
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.04
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.10
 FFI                                            = 1.09
 FFI::CheckLib                                  = 0.15
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 0.42
+FFI::Platypus                                  = 0.45
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.02
 FFI::Platypus::Lang::Fortran                   = 0.07
@@ -90,12 +92,12 @@ File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.07
 File::Which                                    = 1.21
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
-Log::Log4perl::Appender::TAP                   = 0.02
+Log::Log4perl::Appender::TAP                   = 0.03
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.57
 Photography::DX                                = 0.01
 Photography::EV                                = 0.07
-PkgConfig                                      = 0.11026
+PkgConfig                                      = 0.12026
 PlugAuth                                       = 0.33
 PlugAuth::Client::Tiny                         = 0.02
 PlugAuth::Client::Tiny::Apache2AuthenHandler   = 0.04
@@ -108,15 +110,15 @@ Shell::Config::Generate                        = 0.25
 Shell::Guess                                   = 0.06
 String::Template                               = 0.19
 Term::EditLine                                 = 0.09
-Test::Alien                                    = 0.06
+Test::Alien                                    = 0.07
 Test::CChecker                                 = 0.08
 Test::Clustericious::Blocking                  = 0.03
-Test::Clustericious::Cluster                   = 0.31
+Test::Clustericious::Cluster                   = 0.33
 Test::Exec                                     = 0.02
 Test::Fixme                                    = 0.16
-Test::Script                                   = 1.12
+Test::Script                                   = 1.14
 Test::Script::Async                            = 0.02
-Test::Version                                  = 2.03
+Test::Version                                  = 2.05
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.05
@@ -127,8 +129,8 @@ Win32::Process::Info                           = 1.022
 Win32::Shortcut::Readlink                      = 0.02
 Win32API::ProcessStatus                        = 0.05
 WWW::Bugzilla::BugTree                         = 0.07
-Yars                                           = 1.22
-Yars::Command::yars_exercise                   = 0.04
+Yars                                           = 1.25
+Yars::Command::yars_exercise                   = 0.05
 
 App::Ack                                       = 0
 App::cpanminus                                 = 0
